# sonar-cxx-gtest-example

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  main.cc  sonar-project.properties
ToDoCore/unit_test/: CMakeLists.txt
cmake/Modules/: CodeCoverage.cmake  cppcheck.cmake  gmock.cmake
src/: CMakeLists.txt
src/components/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  ComponentTest.cc  ToDoTest.cc
